# initProject

./: .clangd  README.md  initProject+APP.cbuild.yml  initProject.cbuild-idx.yml  initProject.cbuild-pack.yml  initProject.cbuild-set.yml  initProject.cproject.yml  initProject.csolution.yml  initProject.uvguix.Kamal Hossain  initProject.uvguix.Kamal Hossain.bak  initProject.uvoptx  initProject.uvprojx  startup_stm32f10x_md.lst
Listings/: initProject.map
Objects/: delay.d  initProject.axf  initProject.build_log.htm  initProject.htm  initProject.lnp  initProject_APP.dep  main.d  misc.d  stm32f10x_adc.d  stm32f10x_bkp.d  stm32f10x_can.d  stm32f10x_cec.d  stm32f10x_crc.d  stm32f10x_dac.d  stm32f10x_dbgmcu.d  stm32f10x_dma.d  stm32f10x_exti.d  stm32f10x_flash.d  stm32f10x_fsmc.d  stm32f10x_gpio.d  stm32f10x_i2c.d  stm32f10x_it.d  stm32f10x_iwdg.d  stm32f10x_pwr.d  stm32f10x_rcc.d  stm32f10x_rtc.d  stm32f10x_sdio.d  stm32f10x_spi.d  stm32f10x_tim.d  stm32f10x_usart.d  stm32f10x_wwdg.d  system_stm32f10x.d
Start/: core_cm3.c
System/: Delay.c  Delay.h
User/: main.c
tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake
tmp/initProject+APP/: CMakeLists.txt  groups.cmake  toolchain.cmake
tmp/initProject+APP/src/initProject+APP-stamp/: initProject+APP-configure-.cmake  initProject+APP-source_dirinfo.txt
tmp/initProject+APP/tmp/: initProject+APP-cfgcmd.txt  initProject+APP-mkdirs.cmake
